<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:orientation="vertical"
    tools:context="app.we.go.emojidraw.features.main.MainActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/app_title_margin">

        <TextView
            style="@style/app_title"
            android:text="@string/app_name" />


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/icons_container_height"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/emoji_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:rotation="-35"
            android:translationX="-50dp"
            app:srcCompat="@drawable/emoji" />

        <ImageView
            android:id="@+id/draw_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:translationX="50dp"
            app:srcCompat="@drawable/draw" />
    </FrameLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:layout_height="100dp">

        <Button
            android:id="@+id/start_practice_button"
            style="@style/main_menu_button"
            android:background="@drawable/ripple_button_scheme_6"
            android:text="@string/start_practice"
            android:textColor="@color/scheme_1_light"
            app:layout_constraintBottom_toTopOf="@+id/challenge_friend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/challenge_friend"
            style="@style/main_menu_button"
            android:background="@drawable/ripple_button_scheme_3"
            android:text="@string/challenge_friend"

            android:textColor="@color/scheme_6_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_practice_button" />


    </android.support.constraint.ConstraintLayout>

</LinearLayout>
