<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    style="@style/drawing_area_with_controls"
    android:paddingBottom="2dp">

    <app.we.go.emojidraw.widget.DrawingView
        android:id="@+id/drawing_area"
        android:layout_width="@dimen/drawing_area"
        android:layout_height="@dimen/drawing_area"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/drawing_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:dv_backgroundColor="@color/scheme_6_medium"
        app:dv_paintColor="@color/scheme_1_light"
        app:dv_strokeWidth="10"
        />


    <LinearLayout
        android:id="@+id/win_overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/drawing_area"
        app:layout_constraintEnd_toEndOf="@+id/drawing_area"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/drawing_area"
        app:layout_constraintTop_toTopOf="@+id/drawing_area"
        app:layout_constraintVertical_bias="1.0"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:clickable="true"
        tools:ignore="KeyboardInaccessibleWidget"> <!-- this should not be focusable, we just make it clickable,
        to make sure that the user cannot continue paintint onto the canvas for as long as the animation lasts -->

        <TextView
            android:layout_marginTop="50dp"
            android:id="@+id/win_emoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0"
            tools:alpha="1"
            android:textAppearance="@style/emojiTextAppearance"
            android:textSize="52sp"
            tools:text="💯" />

        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/well_done"
            android:textColor="@color/scheme_1_light"
            android:textAppearance="@style/titleTextAppearance"/>


    </LinearLayout>


    <Button
        android:id="@+id/undo_button"
        style="@style/drawing_control_buttons"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/undo"
        app:layout_constraintBottom_toBottomOf="@+id/clear_button"
        app:layout_constraintEnd_toStartOf="@+id/clear_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/clear_button" />

    <Button
        android:id="@+id/skip_button"
        style="@style/drawing_control_buttons"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        app:layout_constraintBottom_toBottomOf="@+id/clear_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clear_button"
        app:layout_constraintTop_toTopOf="@+id/clear_button" />

    <Button
        android:id="@+id/clear_button"
        style="@style/drawing_control_buttons"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/clear"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/skip_button"
        app:layout_constraintStart_toEndOf="@+id/undo_button"
        app:layout_constraintTop_toBottomOf="@+id/drawing_area" />


</android.support.constraint.ConstraintLayout>